--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,24 +10,29 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@comparte-tu-tiempo/contracts": "workspace:*",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.541.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.51.0",
-    "@hookform/resolvers": "^3.9.1",
-    "@tanstack/react-query": "^5.59.0",
-    "@tanstack/react-query-devtools": "^5.59.0",
-    "tailwindcss": "^4.0.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "@comparte-tu-tiempo/contracts": "workspace:*"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.1.12",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.7"
   },
   "devDependencies": {
-    "typescript": "^5.7.3",
     "@types/node": "^22.10.7",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
     "eslint": "^9.18.0",
-    "eslint-config-next": "15.4.6"
+    "eslint-config-next": "15.4.6",
+    "typescript": "^5.7.3"
   }
 }
