feat: add Auth0 authentication infrastructure

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -5,9 +5,11 @@ DATABASE_URL="postgresql://postgres:postgres123@localhost:5432/comparte_tiempo"
 PORT=3001
 NODE_ENV=development
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRES_IN=7d
+# Auth0 Configuration (REPLACE WITH REAL VALUES)
+AUTH0_DOMAIN=your-tenant.auth0.com
+AUTH0_CLIENT_ID=your-client-id
+AUTH0_CLIENT_SECRET=your-client-secret
+AUTH0_AUDIENCE=https://api.compartetutiempo.com
 
 # CORS
 CORS_ORIGIN=http://localhost:3000
